--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=01112a3661c3f166ebc2fb1c676b21b3
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
