--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=01112a3661c3f166ebc2fb1c676b21b3
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost
+#MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -30,3 +30,8 @@ MAILER_DSN=smtp://localhost
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/sendinblue-mailer ###
+# MAILER_DSN=sendinblue+api://KEY@default
+MAILER_DSN=sendinblue+smtp://rigaut.theotime@gmail.com:fZTxBKOHL68MNp2Q@default
+###< symfony/sendinblue-mailer ###
