--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "symfony/webpack-encore-bundle": "^1.13",
         "symfony/yaml": "5.3.*",
         "symfonycasts/verify-email-bundle": "^1.7",
+        "tattali/calendar-bundle": "^1.2",
         "twbs/bootstrap": "5.1.3",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
@@ -54,7 +55,7 @@
         "symfony/browser-kit": "5.3.*",
         "symfony/css-selector": "5.3.*",
         "symfony/debug-bundle": "5.3.*",
-        "symfony/maker-bundle": "^1.36",
+        "symfony/maker-bundle": "^1.37",
         "symfony/phpunit-bridge": "^5.3",
         "symfony/stopwatch": "5.3.*",
         "symfony/web-profiler-bundle": "5.3.*"
