--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^6.0.0",
         "@hotwired/stimulus": "^3.0.0",
         "@popperjs/core": "^2.11.2",
         "@symfony/stimulus-bridge": "^3.0.0",
@@ -19,5 +20,6 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
-    }
+    },
+    "dependencies": {}
 }
